hellodemo/hellodemo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hellodemo
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: hellodemo
