hellodemo/hellodemo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hellodemo
spec:
  ingressClassName: nginx
  rules:
  - host: argocd.app.hellodemo.localdev.me
    http:
      paths:
      - backend:
          service:
            name: hellodemo
            port:
              number: 80
        path: /
        pathType: Prefix
